--- a/CSS & HTML/Ads_manager/style.css
+++ b/CSS & HTML/Ads_manager/style.css
@@ -55,4 +55,72 @@ table tbody tr td:last-of-type{
     text-align: center;
 }
 
+table tbody tr.priority-200 td:first-of-type {
+    border-left: 5px solid #cf7e3f;
+}
 
+table tbody tr.priority-400 td:first-of-type {
+    border-left: 5px solid #5c8cdc;
+}
+
+table tbody tr.priority-500 td:first-of-type {
+    border-left: 5px solid #40c587;
+}
+
+table tbody tr.priority-800 td:first-of-type {
+    border-left: 5px solid #a841ac;
+}
+
+table tbody tr td .fa-circle {
+    transform: scale(0.5);
+}
+
+
+table tbody tr.priority-200 td .fa-circle {
+    color: #cf7e3f;
+}
+
+table tbody tr.priority-400 td .fa-circle {
+    color: #5c8cdc;
+}
+
+table tbody tr.priority-500 td .fa-circle {
+    color: #40c587;
+}
+
+table tbody tr.priority-800 td .fa-circle {
+    color: #a841ac;
+}
+
+.delete {
+    cursor: pointer;
+    background-color: #242c4c;
+    border:0;
+    border-radius: 2px;
+    color: #909090;
+    font-size: 16px;
+    padding: 5px 10px;
+    opacity: 0.1;
+}
+
+table tbody tr:hover .delete {
+    opacity: 1;
+    background-color: #151b31;
+
+}
+
+@media(max-width: 768px) {
+    .container{
+        padding: 20px;
+    }
+
+    table tbody tr .delete {
+        opacity: 0.2;
+        background-color: #242c4c00;
+    }
+
+    table th:nth-of-type(3),
+    table td:nth-of-type(3) {
+        display: none;
+    }
+}
