--- a/CSS & HTML/Microsoft Clone/style.css
+++ b/CSS & HTML/Microsoft Clone/style.css
@@ -74,6 +74,17 @@ ul {
     opacity: 0.9;
 }
 
+.dark {
+    color: #fff;
+}
+
+.dark .btn{
+    background: #f4f4f4;
+    color:#333;
+}
+
+
+
 /* Showcase */
 .showcase {
     width: 100%;
@@ -131,7 +142,8 @@ ul {
 .xbox {
     width: 100%;
     height: 350px;
-    background: url('./img/xbox.png') no-repeat center center/covered;
+    background: url('./img/xbox.png') no-repeat center center/cover;
+    margin-bottom: 20px;
 }
 
 .xbox .content{
@@ -139,6 +151,18 @@ ul {
     padding: 50px 0 0 30px;
 }
 
-.xbox p{
+.xbox p, .carbon p{
     margin: 10px 0 20px;
+}
+
+/* Carbon */
+.carbon{
+    width: 100%;
+    height: 350px;
+    background: url('./img/carbon.jpg') no-repeat center center/cover;
+}
+
+.carbon .content{
+    width: 55%;
+    padding: 100px 0 0 30px;
 }
