--- a/CSS & HTML/Microsoft Clone/style.css
+++ b/CSS & HTML/Microsoft Clone/style.css
@@ -36,7 +36,10 @@ ul {
 
 .main-nav .logo {
     width: 110px;
+}
 
+.main-nav .logo:hover {
+    cursor: pointer;
 }
 
 .main-nav ul {
@@ -57,6 +60,15 @@ ul {
 .main-nav ul.main-menu {
     flex: 1;
     margin-left: 20px;
+}
+
+.menu-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 30px;
+    z-index: 2;
+    display: none;
 }
 
 .btn {
@@ -238,3 +250,82 @@ ul {
     margin-right: 30px;
     margin-bottom: 20px;
 }
+
+@media(max-width: 700px) {
+
+    .menu-btn{
+        display: block;
+    }
+    .menu-btn:hover{
+        opacity: 0.5;
+    }
+
+    .main-nav ul.right-menu {
+        margin-right : 50px;
+    }
+
+    .main-nav ul.main-menu {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #f2f2f2;
+        border-right: #ccc 1px solid;
+        opacity: 0.9;
+        height: 100%;
+        width: 50%;
+        padding: 30px;
+        transform: translateX(-500px);
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .main-nav ul.main-menu.show {
+        transform: translateX(-20px); 
+    }
+
+    .main-nav ul.main-menu li {
+        padding: 10px;
+        border-bottom: #ccc solid 1px;
+        font-size: 14px;
+    }
+
+    .main-nav ul.main-menu li:last-child {
+        border-bottom: 0;
+    }
+
+    .home-cards {
+        grid-template-columns: repeat(2, 1fr);
+
+    }
+
+    .xbox .content p{
+        display: none;
+    }
+
+    .xbox .content h2{
+        margin-bottom: 20px;
+    }
+
+    .carbon .content {
+        width: 85%;
+    }
+
+    .links .links-inner {
+        grid-template-columns: repeat(2,1fr);
+    }
+
+}
+
+@media(max-width: 500px){
+    .home-cards {
+        grid-template-columns: 1fr;
+    }
+
+    .links .links-inner {
+        grid-template-columns: 1fr;
+    }
+    .links .links-inner ul {
+        margin-bottom: 20px;
+    }
+}
+
