--- a/CSS & HTML/Creative_website/style.css
+++ b/CSS & HTML/Creative_website/style.css
@@ -77,12 +77,21 @@ section {
     background-size: 25px;
     background-position: center;
     background-repeat: no-repeat;
-    z-index: 20;
 }
 
 /* NAVIGATION */
 .navigation {
-    display: none;
+    /* display: none; */
+    position: fixed;
+    top: 0;
+    left: 100%;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+}
+
+.navigation.active {
+    left: 0;
 }
 
 /* HOMEPAGE */
