--- a/CSS & HTML/Creative_website/style.css
+++ b/CSS & HTML/Creative_website/style.css
@@ -28,8 +28,14 @@ p {
 section {
     display: flex;
     height: 100vh;
+    flex-direction: column;
     align-items: center;
     padding: 100px;
+    margin-top: 60px;
+}
+section.home{
+    flex-direction: row;
+    margin-top: 0;
 }
 
 /* BUTTON */
