--- a/CSS & HTML/Creative_website/style.css
+++ b/CSS & HTML/Creative_website/style.css
@@ -70,7 +70,7 @@ section.home{
     right: 0;
     width: 60px;
     height: 60px;
-    background: var(--primary-color) url(../images/menu.png);
+    background: var(--primary-color) url(./images/menu.png);
     background-size: 30px;
     background-position: center;
     background-repeat: no-repeat;
@@ -79,7 +79,7 @@ section.home{
 }
 
 .toggle.active {
-    background: var(--primary-color) url(../images/close.png);
+    background: var(--primary-color) url(./images/close.png);
     background-size: 25px;
     background-position: center;
     background-repeat: no-repeat;
@@ -161,6 +161,85 @@ section.home{
     height: 110%;
 }
 
+/* SERVICES PAGE */
+.services {
+    margin-top: 40px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); /* grid-template-columns: 1fr 1fr 1fr; */
+    gap: 40px;
+    text-align: center;
+}
+
+.services .service .icon img {
+    max-width: 100px;
+}
+
+.services .service {
+    padding: 30px;
+    /* background: #f4f4f4; */
+}
+
+.services .service h2 {
+    font-size: 24px;
+    font-weight: 500;
+    margin-top: 20px;
+    color: #1b206e;
+}
+
+.services .service:hover {
+    box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+}
+
+/* WORK PAGE */
+.portfolio {
+    margin-top: 20px;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    margin: 5px;
+    justify-content: center;
+}
+
+.portfolio .item img {
+    width: 100%;
+    height: 100%;
+}
+
+.portfolio .item {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    margin: 5px;
+}
+
+.portfolio .item .action {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: 0.5s
+}
+
+.portfolio .item:hover .action{
+    opacity: 1;
+}
+
+.portfolio .item .action a{
+    display: inline-block;
+    color: #fff;
+    text-decoration: none;
+    border: 1px solid #fff;
+    padding: 5px 15px;
+
+}
+
+
 @media(max-width: 1068px) {
     .home-img {
         display: none;
@@ -176,5 +255,18 @@ section.home{
 
     .navigation ul li a {
         font-size: 2rem;
+    }
+
+    .services {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 768px) {
+    .services {
+        grid-template-columns: 1fr;
+    }
+    .services .service {
+        box-shadow: 0 10px 30px rgba(0,0,0,0.1);
     }
 }
