--- a/CSS & HTML/Creative_website/style.css
+++ b/CSS & HTML/Creative_website/style.css
@@ -259,7 +259,6 @@ section.home{
 
 .contact-form form {
     width: 100%;
-    display: flex;
 }
 
 .contact-form .row {
@@ -291,6 +290,46 @@ section.home{
     resize:none;
 }
 
+.contact-form .row textarea {
+    height: 150px;
+}
+
+.contact-form .row input[type='submit']{
+    background-color: var(--secondary-color);
+    color: #fff;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 300;
+    border: 0;
+    cursor: pointer;
+}
+
+.contact-info{
+    width: 350px;
+    background: #f9f9f9;
+    padding: 60px 40px 20px;
+}
+
+.contact-info .info-box {
+    display: flex;
+    align-items: flex-start;
+    margin-bottom: 40px;
+}
+
+.contact-info .info-box .contact-icon {
+    width: 20px;
+    margin-right: 40px;
+}
+
+.contact-info .info-box .details h4 {
+    color: var(--secondary-color);
+}
+
+.contact-info .info-box .details p, .contact-info .info-box .details a {
+    color: #111;
+} 
+
 
 /* Media Queries */
 @media(max-width: 1068px) {
@@ -312,6 +351,30 @@ section.home{
 
     .services {
         grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contact {
+        flex-direction: column;
+    }
+
+    .contact-form{
+        width:100%;
+        padding: 30px 30px 20px;
+    }
+
+    .contact-form .row {
+        flex-direction: column;
+    }
+
+    .contact-form .input50, .contact-form .input100{
+        width: 100%;
+        margin: 0;
+    }
+
+    .contact-info {
+        width: 100%;
+        margin-top: 20px;
+        padding: 30px 30px 20px;
     }
 }
 
